# cheax

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README  README.md  README_8md.html  annotated.html  annotated_dup.js  cheaky.c  cheax_8h.html  cheax_8h__incl.dot  cheax_8h_source.html  deprecated.html  dir_08ae303b7d607c6284a27a7400f14ada.html  dir_212c93e96823f43324dcf4a0db237beb.html  dir_25bed2a7c448f4bba3d1c3e1494b608f.html  functions.html  functions_vars.html  graph_legend.html  group__Cheax.dot  group__Cheax.html  group__Cheax.js  group__ErrorHandling.dot  group__ErrorHandling.html  group__ErrorHandling.js  group__SetupConfig.dot  group__SetupConfig.html  group__SetupConfig.js  group__TypeSystem.dot  group__TypeSystem.html  group__TypeSystem.js  index.html  menudata.js  modules.html  modules.js  navtreedata.js  navtreeindex0.js  pages.html  prelude.chx  (+28 more)
.github/workflows/: build-test.yml  deploy-docs.yml
cheaky/: .gitignore  CMakeLists.txt  CONDITIONS  WARRANTY  cheaky.c  config.h.in
cheax/: .gitignore  CMakeLists.txt  COPYING  cheax.c
docs/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml
libcheax/: .gitignore  CMakeLists.txt  GenerateVersion.cmake  README  arith.c  arith.h  attrib.c  attrib.h  cinfo.c  cinfo.h  config.c  config.h  core.c  core.h  err.c  err.h  eval.c  eval.h  feat.c  feat.h  format.c  format.h  gc.c  gc.h  htab.c  htab.h  io.c  io.h  loc.c  loc.h  maths.c  maths.h  print.c  print.h  read.c  setup.h.in  strm.c  strm.h  sym.c  sym.h  (+3 more)
libcheax/include/: cheax.h
libcheax/include/cheax/: cheax.h
libcheax/share/cheax/: prelude.chx  testing.chx
libcheax/src/: api.c  api.h  arith.c  arith.h  bltns.c  builtins.c  builtins.h  cinfo.c  cinfo.h  config.c  config.h  config.h.in  core.c  core.h  err.c  err.h  eval.c  eval.h  feat.c  feat.h  format.c  format.h  gc.c  gc.h  htab.c  htab.h  io.c  io.h  loc.c  loc.h  maths.c  maths.h  print.c  print.h  rbtree.c  rbtree.h  read.c  setup.h.in  stream.c  stream.h  (+8 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  enumvalues_0.js  files_0.js  files_1.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js  variables_9.js  variables_a.js  (+5 more)
share/cheax/: prelude.chx
src/: builtins.c  builtins.h  eval.c  eval.h  read.c  read.h
stdlib/: prelude.chx  testing.chx
test/: CMakeLists.txt  demo.tape  limits_test.chx  prelude_test.chx
